--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1>Hey, i'm a big heading</h1>
-<p>Hey. I'm a paragraph element. Cool Huh?</p>
-<a href="https://google.com" target="_blank" title="Lets go to google">Click Me for Google</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test Page</title>
+</head>
+<body>
+    <h1>Hey, i'm a big heading</h1>
+    <p>Hey. I'm a <b>paragraph</b> element. Cool Huh?</p>
+    <a href="https://google.com" target="_blank" title="Lets go to google">Click Me for Google</a>
+    <p>my name is:<br> Starsinger</p>
+    <img src="img/starsinger_2_t_v3.webp">
+</body>
+</html>
