changed image for copyright

--- a/test.html
+++ b/test.html
@@ -4,10 +4,10 @@
     <title>Test Page</title>
 </head>
 <body>
-    <h1>Hey, i'm a big heading</h1>
+    <h1>Hey, i'm a big heading. Look at me</h1>
     <p>Hey. I'm a <b>paragraph</b> element. Cool Huh?</p>
     <a href="https://google.com" target="_blank" title="Lets go to google">Click Me for Google</a>
     <p>my name is:<br> Starsinger</p>
-    <img src="img/starsinger_2_t_v3.webp">
+    <img src="img/Aurora_v1_1-5.webp">
 </body>
 </html>
