--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <h1>Hey, i'm a big heading. Look at me</h1>
     <p>Hey. I'm a <b>paragraph</b> element. Cool Huh?</p>
     <a href="https://google.com" target="_blank" title="Lets go to google">Click Me for Google</a>
-    <p>my name is:<br> Starsinger</p>
+    <p>my name is:<br> Aurora</p>
     <img src="img/Aurora_v1_1-5.webp">
 </body>
 </html>
