--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Aurora</title>
-    <link rel="icon" href="img/Aurora_v1_1-5.webp"
+    <link rel="icon" href="img/Aurora_v1_1-5.webp">
 </head>
 <body>
     <!--header element -->
