--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Aurora</title>
     <link rel="icon" href="img/Aurora_v1_1-5.webp">
+    <link rel="stylesheet" type="text/css" href="css/aurora.css">
 </head>
 <body>
     <!--header element -->
