wrote css for index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Aurora</title>
     <link rel="icon" href="img/Aurora_v1_1-5.webp">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/aurora.css">
 </head>
 <body>
@@ -15,9 +18,9 @@
     <!-- main element -->
     <main>
         <h2>About Aurora</h2>
-        <p>Aurora is a lassez faire Skittermander Solarian who fights the swarm!</p>
+        <p>Aurora is a laissez-faire Skittermander Solarian who fights the swarm!</p>
         <img src="img/Aurora_new_2.webp">
-        <p>Aurora Vibin'</p>
+        <p class="caption">Aurora Vibin'</p>
         <!-- Characteristics -->
         <h2>Aurora's Characteristics</h2>
         <ol>
@@ -38,8 +41,7 @@
     </main>
 <!-- footer element -->
 <footer>
-    <p>This site was created during a CSS Class &copy; JonDemand</p>
+    <p>This site was created during a CSS Class &copy; <a target="_blank" href="https://github.com/JonDemand">JonDemand</a></p>
 </footer>
-
 </body>
 </html>
